--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OLYMPUS GYM | ABOUT</title>
     <link rel="stylesheet" href="/style/style1.css">
-    <!--<link rel="stylesheet" href="/style/style2.css">-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
@@ -18,18 +17,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-    <body>
         <header class="content-header">
-            <nav class="nav-bar" heigth="10vh">
+            <nav class="nav-bar">
                 <div class="a-content">
-                <a href="/index.html">HOME</a>
-                <a href="about.html">ABOUT</a>
-                <a href="contact.html">CONTACT</a>
-                <a href="benefits.html">BENEFITS AND TIPS</a>
-                <a href="schedule.html">SCHEDULE</a>
-                </div>
+                    <a href="/index.html">HOME</a>
+                    <a href="/html/about.html">ABOUT</a>
+                    <a href="/html/contact.html">CONTACT</a>
+                    <a href="/html/benefits.html">BENEFITS AND TIPS</a>
+                    <a href="/html/schedule.html">SCHEDULE</a>
+                    <a href="/html/form.html">RAFFLE</a>
+                    </div>
                 <div class="nav-img">
-                    <img class="logo" src="imagenes/logo.png" alt="">
+                    <img class="logo" src="/imagenes/logo.png" alt="">
                 </div>
             </nav>
         </header>
