--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OLYMPUS GYM|HOME</title>
     <link rel="stylesheet" href="/style/style1.css">
-    <!--<link rel="stylesheet" href="/style/style2.css">-->
     <link rel="stylesheet" href="/style/style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,16 +19,17 @@
 </head>
 <body>
     <header class="content-header">
-        <nav class="nav-bar" heigth="10vh">
+        <nav class="nav-bar">
             <div class="a-content">
-            <a href="/index.html">HOME</a>
-            <a href="html/about.html">ABOUT</a>
-            <a href="html/contact.html">CONTACT</a>
-            <a href="/html/benefits.html">BENEFITS AND TIPS</a>
-            <a href="html/schedule.html">SCHEDULE</a>
-            </div>
+                <a href="/index.html">HOME</a>
+                <a href="/html/about.html">ABOUT</a>
+                <a href="/html/contact.html">CONTACT</a>
+                <a href="/html/benefits.html">BENEFITS AND TIPS</a>
+                <a href="/html/schedule.html">SCHEDULE</a>
+                <a href="/html/form.html">RAFFLE</a>
+                </div>
             <div class="nav-img">
-                <img class="logo" src="imagenes/logo.png" alt="">
+                <img class="logo" src="/imagenes/logo.png" alt="">
             </div>
         </nav>
     </header>
@@ -42,7 +42,7 @@
         </section>
         <section class="texto-1">
         <h4>Thank you for visiting our website. <br> Here you will find different sections  about our history, our prices. <br> You can also participate in the monthly raffles</h4>
-          <img class="icono" src="imagenes/icon.png" alt="icono del gym">    
+          <img class="icono" src="/imagenes/icon.png" alt="icono del gym">    
         </section>
     </main>
 </body>
